--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,26 @@
  margin: 0;
 }
 
+:root {
+  --main-bg-color: #212121;
+  --wrapper-bg-color: #2c2c2c;
+  --header-font-family: Helvetica;
+  --header-font-size: 14px;
+  --regular-font-size:14px;
+  --main-font-color: #fff;
+   --border-radius: 15px;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--main-font-color);
+  background-color: var(--main-bg-color);
 }
+
 
 .bartender-wrapper img{
   max-width: 20%;
@@ -45,7 +58,53 @@ body {
 }
 
 .bartender-right-col h2{
-  margin-top: .5em;
- 
+  margin-top: .5em; 
 }
 
+/* Dashboard starts here */
+
+
+/* dashboard grid */
+
+.dashboard-wrapper{
+  display:grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-areas:
+  'statistics orders bartenders'
+   'taps taps storage';
+   gap: 1em;
+}
+
+
+.bartender-wrapper{
+  grid-area: bartenders;
+  background: red;
+}
+
+.statistics-wrapper{
+  grid-area: statistics;
+  background: green;
+
+}
+
+.orders-wrapper{
+  grid-area: orders;
+  background: yellow;
+
+}
+
+.taps-wrapper{
+  grid-area: taps;
+  background: hotpink;
+
+}
+
+.storage-wrapper{
+  grid-area: storage;
+  background: rebeccapurple;
+
+}
+
+.dashboard-wrapper > article {
+  border-radius: var(--border-radius);
+}
