--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-*,*::before, *::after{
- box-sizing: border-box;
- padding: 0;
- margin: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 :root {
@@ -9,102 +11,138 @@
   --wrapper-bg-color: #2c2c2c;
   --header-font-family: Helvetica;
   --header-font-size: 14px;
-  --regular-font-size:14px;
+  --regular-font-size: 14px;
   --main-font-color: #fff;
-   --border-radius: 15px;
+  --border-radius: 15px;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--main-font-color);
   background-color: var(--main-bg-color);
 }
 
-
-.bartender-wrapper img{
+.bartender-wrapper img {
   max-width: 20%;
 }
 
 /* Bartenders section */
-.bartender-wrapper{
-  display:flex;
+.bartender-wrapper {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 3em;
   margin: 2em auto;
 }
-.bartender-card{
+.bartender-card {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  background:red;
-  min-width:20%;
-  max-width:40%;
+  background: red;
+  min-width: 20%;
+  max-width: 40%;
   padding: 3em;
   border-radius: 20px;
   margin-left: 2em;
   color: #fff;
-  background:#2c2c2c;
+  background: #2c2c2c;
 }
 
-.bartender-left-col,.bartender-mid-col{
+.bartender-left-col,
+.bartender-mid-col {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.bartender-right-col h2{
-  margin-top: .5em; 
+.bartender-right-col h2 {
+  margin-top: 0.5em;
 }
 
 /* Dashboard starts here */
 
-
 /* dashboard grid */
 
-.dashboard-wrapper{
-  display:grid;
-  grid-template-columns: 1fr 2fr 1fr;
+.dashboard-wrapper {
+  display: grid;
+  grid-template-columns: 1.4fr 2fr 1.4fr;
   grid-template-areas:
-  'statistics orders bartenders'
-   'taps taps storage';
-   gap: 1em;
+    "statistics orders bartenders"
+    "taps taps storage";
+  gap: 1em;
 }
 
-
-.bartender-wrapper{
+.bartender-wrapper {
   grid-area: bartenders;
   background: red;
 }
 
-.statistics-wrapper{
+.statistics-wrapper {
   grid-area: statistics;
   background: green;
-
 }
 
-.orders-wrapper{
+.orders-wrapper {
   grid-area: orders;
   background: yellow;
-
 }
 
-.taps-wrapper{
+.taps-wrapper {
   grid-area: taps;
   background: hotpink;
-
 }
 
-.storage-wrapper{
+.storage-wrapper {
   grid-area: storage;
-  background: rebeccapurple;
-
+  background-color: var(--wrapper-bg-color);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .dashboard-wrapper > article {
   border-radius: var(--border-radius);
+}
+
+/* Storage */
+
+.storage-wrapper > h1 {
+  padding: 1em;
+  width: 100%;
+}
+
+.storage-card {
+  width: 45%;
+  /* height: 8em; */
+  margin: 0.5em 0;
+  padding: 0.5em;
+  text-align: center;
+  border-radius: var(--border-radius);
+  background: var(--main-bg-color);
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.storage-left-col {
+  width: 40%;
+}
+
+.storage-left-col > img {
+  width: 100%;
+}
+
+.storage-right-col {
+  width: 60%;
+  font-weight: bold;
+}
+
+.storage-right-col > span {
+  font-size: 0.7em;
+}
+
+.storage-right-col > h3 {
+  font-size: 2em;
 }
