--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ body {
 
 .taps-wrapper {
   grid-area: taps;
-  background: hotpink;
+  background-color: var(--wrapper-bg-color);
 }
 
 .storage-wrapper {
@@ -106,6 +106,67 @@ body {
   border-radius: var(--border-radius);
 }
 
+/* Taps */
+
+.taps-wrapper > h1 {
+  width: 100%;
+  padding: 1em;
+}
+
+.taps-flex-wrapper {
+  height: 90%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.taps-card {
+  width: 13%;
+  height: 90%;
+  padding: 0.5em;
+  margin: 0.5em 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  border-radius: var(--border-radius);
+  background-color: var(--main-bg-color);
+}
+
+.taps-card > img {
+  width: 90%;
+  mix-blend-mode: difference;
+}
+
+.taps-card > span {
+  padding: 1em 0;
+  font-size: 3em;
+  font-weight: bold;
+  mix-blend-mode: difference;
+}
+
+@keyframes wave-animation {
+  0% {
+    background-position: 0 bottom;
+  }
+  100% {
+    background-position: 200px bottom;
+  }
+}
+
+.wave {
+  background-image: url("http://i.imgur.com/uFpLbYt.png");
+  animation: wave-animation 1s infinite linear;
+  background-size: 200px 40%;
+  background-repeat: repeat-x;
+  opacity: 1;
+}
+
 /* Storage */
 
 .storage-wrapper > h1 {
@@ -117,7 +178,7 @@ body {
   width: 45%;
   /* height: 8em; */
   margin: 0.5em 0;
-  padding: 0.5em;
+  padding: 0 0.5em 0 0.5em;
   text-align: center;
   border-radius: var(--border-radius);
   background: var(--main-bg-color);
@@ -127,7 +188,7 @@ body {
 }
 
 .storage-left-col {
-  width: 40%;
+  width: 25%;
 }
 
 .storage-left-col > img {
@@ -135,7 +196,7 @@ body {
 }
 
 .storage-right-col {
-  width: 60%;
+  width: 75%;
   font-weight: bold;
 }
 
