--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,6 @@ body {
 }
 
 
-.bartender-wrapper img{
-  max-width: 30%;
-  margin: 0;
-  padding: 0;
-outline: 1px solid red
-}
 
 /* Bartenders section */
 .bartender-wrapper{
@@ -45,37 +39,48 @@ outline: 1px solid red
 
 }
 .bartender-card{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  background:red;
-  min-height: 1.5em;
+  display:grid;
+  grid-template-areas: 
+  'left-col mid-col  right-col';
+  gap: 1.2em;
+  grid-template-columns: 1fr 3fr 1fr;
+  min-height: 3em;
   min-width:20%;
-  max-width:95%;
+  max-width:96%;
   padding: 1em 2em;
   border-radius: 20px;
-  color: #fff;
+  color:var(--main-font-color);
   background: var(--main-bg-color);
 }
+
+.bartender-wrapper img{
+  max-width: 100%;
+}
+
 .bartenders-heading{
   align-self: flex-start;
   margin-left: .6em;
+  font-size: var(--header-font-size);
 }
 
 .bartender-left-col,.bartender-mid-col{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  outline: 1px solid red
-
 }
 
-.bartender-right-col h2{
-  margin-top: .5em; 
+.bartender-left-col{
+grid-area: left-col;
+}
+.bartender-mid-col{
+  grid-area: mid-col;
+  align-self: flex-end;
+  justify-self: center;
 }
 
-/* Dashboard starts here */
-
+.bartender-right-col{
+  grid-area: right-col;
+}
 
 /* dashboard grid */
 
