--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: var(--main-font-color);
   background-color: var(--main-bg-color);
+  padding:1em;
 }
 
 
