--- a/src/App.css
+++ b/src/App.css
@@ -38,14 +38,14 @@ body {
 }
 .bartender-card {
   display: grid;
-  grid-template-areas: "left-col mid-col  right-col";
+  grid-template-areas: "left-col mid-col right-col";
   gap: 1.2em;
   grid-template-columns: 1fr 3fr 1fr;
   min-height: 3em;
   min-width: 20%;
   max-width: 96%;
   padding: 1em 2em;
-  border-radius: 20px;
+  border-radius: var(--border-radius);
   color: var(--main-font-color);
   background: var(--main-bg-color);
 }
@@ -56,7 +56,7 @@ body {
 
 .bartenders-heading {
   align-self: flex-start;
-  margin-left: 0.6em;
+  padding-left: 1em;
   font-size: var(--header-font-size);
 }
 
@@ -70,6 +70,7 @@ body {
 .bartender-left-col {
   grid-area: left-col;
 }
+
 .bartender-mid-col {
   grid-area: mid-col;
   align-self: flex-end;
@@ -89,11 +90,6 @@ body {
     "statistics orders bartenders"
     "taps taps storage";
   gap: 1em;
-}
-
-.bartender-wrapper {
-  grid-area: bartenders;
-  background: red;
 }
 
 .statistics-wrapper {
@@ -127,6 +123,7 @@ body {
 .taps-wrapper > h1 {
   width: 100%;
   padding: 1em;
+  font-size: var(--header-font-size);
 }
 
 .taps-flex-wrapper {
@@ -148,7 +145,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   text-align: center;
   border-radius: var(--border-radius);
   background-color: var(--main-bg-color);
@@ -160,7 +157,7 @@ body {
 }
 
 .taps-card > span {
-  padding: 1em 0;
+  padding: 0 0 0.5em 0;
   font-size: 3em;
   font-weight: bold;
   mix-blend-mode: difference;
@@ -188,6 +185,7 @@ body {
 .storage-wrapper > h1 {
   padding: 1em;
   width: 100%;
+  font-size: var(--header-font-size);
 }
 
 .storage-card {
