--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ body {
 
 .statistics-wrapper {
   grid-area: statistics;
-  background: green;
+ background: var(--main-bg-color);
 }
 
 .orders-wrapper {
@@ -258,3 +258,18 @@ line-height: 160%;
 .order-number{
   margin-left: .8em;
 }
+
+/* statistics */
+.in-queue{
+font-size: 2.5em;
+display:flex;
+justify-content:center;
+align-items:center;
+padding:.2em 0;
+}
+
+.in-queue h1{
+font-size:1.3em;
+display:inline;
+}
+
