--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 *,
 *::before,
@@ -14,7 +14,7 @@
   --wrapper-bg-color: #2c2c2c;
   --header-font-family: "Roboto", sans-serif;
   --header-font-weight: bold;
-  --big-header-font-size: 18pt;
+  --big-header-font-size: 16pt;
   --header-font-size: 14pt;
   --regular-font-size: 11pt;
   --main-font-color: #fff;
@@ -43,6 +43,7 @@ body {
   font-family: var(--header-font-family), -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: var(--regular-font-size);
   color: var(--main-font-color);
   background-color: var(--main-bg-color);
   padding: 1em;
@@ -50,14 +51,14 @@ body {
 }
 
 /* Loader */
-.loader-wrapper{
+.loader-wrapper {
   position: absolute;
   top: 50%;
   right: 50%;
-  transform: translate(50%,-50%);
+  transform: translate(50%, -50%);
   background: var(--wrapper-bg-color);
   padding: 5em;
- border-radius: var(--border-radius);
+  border-radius: var(--border-radius);
 }
 
 /* Bartenders section */
@@ -77,9 +78,9 @@ body {
   display: grid;
   grid-template-areas: "left-col mid-col right-col";
   grid-template-columns: 1.4fr 3fr 1fr;
-  min-height: 3em;
+  height: auto;
   min-width: 20%;
-  max-width: 90%;
+  width: 90%;
   padding: 1em;
   border-radius: var(--border-radius);
   color: var(--main-font-color);
@@ -88,6 +89,7 @@ body {
 
 .bartender-left-col > img {
   max-width: 100%;
+  max-height: 50%;
 }
 
 .bartender-left-col > h2 {
@@ -106,10 +108,11 @@ body {
 .bartender-mid-col {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .bartender-left-col {
+  height: 100%;
   grid-area: left-col;
   align-items: center;
 }
@@ -333,7 +336,7 @@ body {
 }
 
 .order-img {
-  height: 100px;
+  height: 80px;
 }
 
 .order-number {
@@ -341,6 +344,10 @@ body {
 }
 
 /* statistics */
+canvas {
+  border-radius: var(--border-radius);
+}
+
 .in-queue {
   font-size: 2.5em;
   display: flex;
@@ -404,5 +411,23 @@ body {
   .taps-card > img {
     width: 90%;
     padding: 0;
+  }
+}
+
+@media only screen and (min-device-width: 1200px) {
+  .dashboard-wrapper {
+    grid-template-columns: 1.4fr 2fr 1.4fr;
+    grid-template-rows: 50vh 45vh;
+    grid-template-areas:
+      "statistics orders bartenders"
+      "taps taps storage";
+  }
+
+  .bartender-card {
+    height: 28%;
+  }
+
+  .storage-card {
+    width: 30%;
   }
 }
