--- a/src/App.css
+++ b/src/App.css
@@ -76,20 +76,23 @@ body {
 
 .bartender-card {
   display: grid;
-  grid-template-areas: "left-col mid-col right-col";
-  grid-template-columns: 1.4fr 3fr 1fr;
+  grid-template-areas: "left-col mid-top-col right-col" "left-col mid-bot-col mid-bot-col";
+  grid-template-columns: 1.4fr 3fr 0.5fr;
+  grid-template-rows: 50% 50%;
   height: auto;
   min-width: 20%;
-  width: 90%;
-  padding: 1em;
+  width: 95%;
+  padding: 0.5em;
   border-radius: var(--border-radius);
   color: var(--main-font-color);
   background: var(--main-bg-color);
 }
 
 .bartender-left-col > img {
+  min-width: 3em;
   max-width: 100%;
-  max-height: 50%;
+  max-height: 70%;
+  margin-bottom: 0.2em;
 }
 
 .bartender-left-col > h2 {
@@ -104,8 +107,7 @@ body {
   font-weight: var(--header-font-weight);
 }
 
-.bartender-left-col,
-.bartender-mid-col {
+.bartender-left-col {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -117,18 +119,29 @@ body {
   align-items: center;
 }
 
-.bartender-mid-col {
-  grid-area: mid-col;
-  align-self: flex-start;
-  justify-self: center;
+.bartender-mid-top-col {
+  grid-area: mid-top-col;
+  padding-left: 0.5em;
 }
 
-.bartender-mid-col div > h4 {
+.bartender-mid-bot-col {
+  grid-area: mid-bot-col;
+  padding-left: 0.5em;
+}
+
+.bartender-mid-top-col h4,
+.bartender-mid-bot-col h4 {
   font-weight: var(--header-font-weight);
+}
+
+.bartender-mid-top-col span,
+.bartender-mid-bot-col span {
+  font-size: var(--regular-font-size);
 }
 
 .bartender-right-col {
   grid-area: right-col;
+  text-align: right;
 }
 
 .bartender-right-col h4 {
@@ -196,7 +209,7 @@ body {
 
 .taps-wrapper > h1 {
   width: 100%;
-  padding: 1em;
+  padding: 1em 0 0 1em;
   font-size: var(--header-font-size);
   font-weight: var(--header-font-weight);
   font-weight: var(--header-font-weight);
@@ -268,7 +281,7 @@ body {
 }
 
 .storage-card {
-  width: 30%;
+  width: 45%;
   /* height: 8em; */
   margin: 0.5em 0;
   padding: 0 0.5em 0 0.5em;
@@ -378,7 +391,7 @@ canvas {
   }
 
   .storage-card {
-    width: 45%;
+    width: 30%;
   }
 
   .order-card {
@@ -392,8 +405,8 @@ canvas {
 
 @media only screen and (min-width: 992px) {
   .dashboard-wrapper {
-    grid-template-columns: 1.4fr 2fr 1.4fr;
-    grid-template-rows: 75vh auto;
+    grid-template-columns: 1.4fr 1fr 1.4fr;
+    grid-template-rows: 60vh auto;
     grid-template-areas:
       "statistics orders bartenders"
       "taps taps storage";
@@ -412,22 +425,23 @@ canvas {
     width: 90%;
     padding: 0;
   }
+
+  .order-card {
+    width: 90%;
+  }
 }
 
 @media only screen and (min-device-width: 1200px) {
   .dashboard-wrapper {
     grid-template-columns: 1.4fr 2fr 1.4fr;
     grid-template-rows: 50vh 45vh;
-    grid-template-areas:
-      "statistics orders bartenders"
-      "taps taps storage";
   }
 
   .bartender-card {
     height: 28%;
   }
 
-  .storage-card {
-    width: 30%;
+  .order-card {
+    width: 48%;
   }
 }
