--- a/src/App.css
+++ b/src/App.css
@@ -241,9 +241,13 @@ body {
   background-color: var(--main-bg-color);
 }
 
-/* .tap-out {
+/* .tapOut {
   filter: drop-shadow(2px 2px 10px #31bec2) invert(75%);
 } */
+
+.taps-card > h3 {
+  mix-blend-mode: difference;
+}
 
 .taps-card > img {
   width: 60%;
@@ -268,7 +272,6 @@ body {
 }
 
 .wave {
-  background-image: url("http://i.imgur.com/uFpLbYt.png");
   animation: wave-animation 1s infinite linear;
   background-size: 200px 40%;
   background-repeat: repeat-x;
