--- a/src/App.css
+++ b/src/App.css
@@ -426,6 +426,13 @@ canvas {
     grid-template-columns: 1.4fr 2fr 1.4fr;
     grid-template-rows: 50vh 45vh;
   }
+  .bartender-card{
+    grid-template-columns: 1.4fr 1fr 0.5fr;
+}
+
+.bartender-right-col {
+  margin-right: 1em;
+}
 
   .order-card {
     width: 48%;
